--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <div>
             <div class="flex mb-[28px]">
                 <h2 class="font-bold mr-[77px]">How can I get help if I'm stuck on a challenge?</h2>
-                <img id="img4" class="cursor-pointer" src="./img/pilus.png" alt="" />
+                <img id="img4" class="cursor-pointer" src="./img/pilus.git png" alt="" />
                 <img id="imgmin4" class="cursor-pointer hidden" src="./img/minus.png" alt="" />
               </div>
               <p id="p4" class="mb-[24px] text-[#8B6990]">
